frontend/src/css/unregister.css
/* unregisterdrivers.css */
.unregister-drivers {
    /* display: flex;
    flex-direction: column;
    align-items: center; */
    padding: 20px;
    position: relative; /* Add relative positioning to the container */
  }
  
  h2 {
    margin-bottom: 20px;
  }
  
  .driver-row {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 10px;
  }
  
  input {
    padding: 8px;
    margin-right: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
    width: 300px;
  }
  
  button {
    background-color: green;
    color: white;
    padding: 10px 20px;
    font-size: 16px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
  }
  
  button:hover {
    background-color: darkgreen;
  }
  
  button:active {
    background-color: green;
  }
  
  .go-back-button {
    margin-top: 20px;
  }
  
  .search-bar {
    position: absolute;
    top: 0;
    right: 0;
    margin-top: 15px;
    margin-right: 15px;
  }

  .search-bar input {
    padding: 8px;
    border: 1px solid #ccc;
    border-radius: 5px;
    width: 200px;
  }

